--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
                 <h4>Guitar for beginners</h4>
                 <p>Instructor Name</p>
                 <img src="img/stars.png">
-                <p class="price">$200 <span>$15</span></p>
+                <div class="price"> 
+                    <p class="regular">$200</p>
+                    <p class="offer">$15</p>
+                </div>
                 <a href="#" class="button">Add to Cart</a>
             </div>
         </div> <!--.course-->
@@ -111,7 +114,10 @@
                 <h4>Huerto en tu casa</h4>
                 <p>Instructor Name</p>
                 <img src="img/stars.png">
-                <p class="price">$200 <span>$15</span></p>
+                <div class="price"> 
+                    <p class="regular">$200</p>
+                    <p class="offer">$15</p>
+                </div>
                 <a href="#" class="button">Add to Cart</a>
             </div>
         </div> <!--.course-->
